--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<body>
 
 <!-- Main Header -->
 <header class="main-header ">
